--- a/projects/jtProject/authors.html
+++ b/projects/jtProject/authors.html
@@ -30,16 +30,16 @@
             <nav>
               <ul class="t-menuList">
                 <li class="t-menuListItem"><a href="/">Всё сразу</a></li>
-                <li class="t-menuListItem"><a href="#">Статьи</a></li>
-                <li class="t-menuListItem"><a href="#">Подборки</a></li>
-                <li class="t-menuListItem"><a href="#">Кейс недели</a></li>
-                <li class="t-menuListItem"><a href="#">Переводы</a></li>
-                <li class="t-menuListItem"><a href="#">Блоги компаний</a></li>
-                <li class="t-menuListItem"><a href="#">Экспертное мнение</a></li>
-                <li class="t-menuListItem"><a href="#">Туториалы</a></li>
-                <li class="t-menuListItem"><a href="#">Бэкстейдж</a></li>
-                <li class="t-menuListItem"><a href="#">Библиотека</a></li>
-                <li class="t-menuListItem"><a href="#">События</a></li>
+                <li class="t-menuListItem test"><a href="#one">Статьи</a></li>
+                <li class="t-menuListItem test"><a href="#two">Подборки</a></li>
+                <li class="t-menuListItem test"><a href="#three">Кейс недели</a></li>
+                <li class="t-menuListItem test"><a href="#four">Переводы</a></li>
+                <li class="t-menuListItem test"><a href="#five">Блоги компаний</a></li>
+                <li class="t-menuListItem test"><a href="#six">Экспертное мнение</a></li>
+                <li class="t-menuListItem test"><a href="#seven">Туториалы</a></li>
+                <li class="t-menuListItem test"><a href="#eight">Бэкстейдж</a></li>
+                <li class="t-menuListItem test"><a href="#nine">Библиотека</a></li>
+                <li class="t-menuListItem test"><a href="#ten">События</a></li>
                 <li class="t-menuListItem active"><a href="/authors.html">Авторы</a></li>
                 <li class="t-menuListItem"><a href="#">Информация</a></li>
               </ul>
@@ -1161,7 +1161,7 @@
                 </div>
                 <input type="text" placeholder="Название статьи" class="t-addArticleName">
                 <select name="" class="t-selectArticleCategory">
-                    <option class="t-noneItem" value="1">Выберите рубрику</option>
+                    <option class="t-noneItem dontUse" disabled="disabled" selected value="1">Выберите рубрику</option>
                     <option value="2">Категория 1</option>
                     <option value="3">Категория 2</option>
                     <option value="4">Категория 3</option>
@@ -1171,7 +1171,6 @@
             </div>
         </section>
         <div class="cursor">
-            <div class="dot"></div>
             <div class="loader"></div>
         </div>
     </div>
