--- a/projects/MIR/contacts.html
+++ b/projects/MIR/contacts.html
@@ -22,9 +22,10 @@
             </a>
         </div>
         <nav class="t-headerNavigation">
-            <ul class="t-mainList t-flex t-headerNavigationList t-blackLinks">
-                <li><a href="#" class="t-linkItem t-white">+7 900 900-90-90</a></li>
-                <li><a href="#" class="t-linkItem t-white">inbox@mir.ru</a></li>
+            <ul class="t-mainList t-flex t-flexAlign t-headerNavigationList t-blackLinks">
+                <li class="t-leaveRequest t-none"><button class="t-btn">Оформить заявку</button></li>
+                <li class="t-navigationNumber"><a href="#" class="t-linkItem t-white">+7 900 900-90-90</a></li>
+                <li class="t-navigationEmail"><a href="#" class="t-linkItem t-white">inbox@mir.ru</a></li>
                 <li><a href="/aboutCompany.html" class="t-linkItem t-white">О компании</a></li>
                 <li><a href="/clients.html" class="t-linkItem t-white">Клиентам</a></li>
                 <li><a href="/services.html" class="t-linkItem t-white">Услуги</a></li>
@@ -36,30 +37,40 @@
         <main class="t-insideMain">
             <div class="t-contactsWrapperSection">
                 <h1 class="t-middleTitle">Контакты</h1>
-                <div class="t-contactsWrapper">
-                    <h2 class="t-contactNumber t-middleTitle t-middleTitleMidLight">8 800 222 98 98</h2>
-                    <h2 class="t-contactEmail t-middleTitle t-middleTitleMidLight">mircargo@mail.ru</h2>
-                </div>
-                <div class="t-contactsFormWrapper">
-                    <h2 class="t-middleText">Обратная связь</h2>
-                    <form class="t-contactsForm">
-                        <div class="t-formName t-formItem">
-                            <label for="name" class="t-standardTitle t-blackPrimaryColor">Ваше имя</label>
-                            <input type="text" id="name" class="t-input">
+                <div class="t-contactsInfoWrapper t-flex">
+                    <div class="t-contactsWrapper">
+                        <div class="t-officeIn">
+                            <span class="t-middleText ">Главный офис в Москве</span>
+                            <h2 class="t-contactNumber t-middleTitle t-middleTitleMidLight">8 800 222 98 98</h2>
+                            <h2 class="t-contactEmail t-middleTitle t-middleTitleMidLight">mircargo@mail.ru</h2>
+                            <a href="#" class="t-contactAddress t-middleTitle t-middleTitleMidLight">ул.Ленина, 1, офис 1</a>
                         </div>
-                        <div class="t-formEmailOrPhone t-formItem">
-                            <label for="emailOrPhone" class="t-standardTitle t-blackPrimaryColor">Телефон или электронная почта</label>
-                            <input type="text" id="emailOrPhone" class="t-input">
+                        <div class="t-forApplicants">
+                            <span class="t-middleText">Для соискателей</span>
+                            <h2 class="t-contactNumber t-middleTitle t-middleTitleMidLight">mircargo@hr.ru</h2>
                         </div>
-                        <div class="t-formEmailOrPhone t-formItem">
-                            <label for="commentOrQuestion" class="t-standardTitle t-blackPrimaryColor">Комментарий или вопрос</label>
-                            <input type="text" id="commentOrQuestion" class="t-input">
-                        </div>
-                        <button class="t-btn t-sendContactsBtn" disabled>Отправить</button>
-                        <div class="t-sendingWarning">
-                            <p class="t-smallTitleLight t-blackPrimaryColor">Нажимая кнопку «Отправить» вы соглашаетесь с условиями обработки персональных данных</p>
-                        </div>
-                    </form>
+                    </div>
+                    <div class="t-contactsFormWrapper">
+                        <h2 class="t-middleText">Обратная связь</h2>
+                        <form class="t-contactsForm">
+                            <div class="t-formName t-formItem">
+                                <label for="name" class="t-standardTitle t-blackPrimaryColor">Ваше имя</label>
+                                <input type="text" id="name" class="t-input">
+                            </div>
+                            <div class="t-formEmailOrPhone t-formItem">
+                                <label for="emailOrPhone" class="t-standardTitle t-blackPrimaryColor">Телефон или электронная почта</label>
+                                <input type="text" id="emailOrPhone" class="t-input">
+                            </div>
+                            <div class="t-formEmailOrPhone t-formItem">
+                                <label for="commentOrQuestion" class="t-standardTitle t-blackPrimaryColor">Комментарий или вопрос</label>
+                                <input type="text" id="commentOrQuestion" class="t-input">
+                            </div>
+                            <button class="t-btn t-sendContactsBtn" disabled>Отправить</button>
+                            <div class="t-sendingWarning">
+                                <p class="t-smallTitleLight t-blackPrimaryColor">Нажимая кнопку «Отправить» вы соглашаетесь с условиями обработки персональных данных</p>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </main>
