--- a/projects/MIR/documents.html
+++ b/projects/MIR/documents.html
@@ -22,9 +22,10 @@
             </a>
         </div>
         <nav class="t-headerNavigation">
-            <ul class="t-mainList t-flex t-headerNavigationList t-blackLinks">
-                <li><a href="#" class="t-linkItem t-white">+7 900 900-90-90</a></li>
-                <li><a href="#" class="t-linkItem t-white">inbox@mir.ru</a></li>
+            <ul class="t-mainList t-flex t-flexAlign t-headerNavigationList t-blackLinks">
+                <li class="t-leaveRequest t-none"><button class="t-btn">Оформить заявку</button></li>
+                <li class="t-navigationNumber"><a href="#" class="t-linkItem t-white">+7 900 900-90-90</a></li>
+                <li class="t-navigationEmail"><a href="#" class="t-linkItem t-white">inbox@mir.ru</a></li>
                 <li><a href="/aboutCompany.html" class="t-linkItem t-white">О компании</a></li>
                 <li><a href="/clients.html" class="t-linkItem t-white">Клиентам</a></li>
                 <li><a href="/services.html" class="t-linkItem t-white">Услуги</a></li>
