--- a/projects/jtProject/index.html
+++ b/projects/jtProject/index.html
@@ -2164,7 +2164,49 @@
         </section>
       </main>
       <div class="t-absolute t-newsModal">
+
         <div class="t-newsModalInfo">
+          <div class="t-fixed t-newsHiddenHeader">
+            <div class="t-hiddenLogoWrapper anotherHiddenLogo">
+              <div class="t-burger t-burgerMob"><span class="line"></span><span class="line"></span><span class="line"></span></div><a href="/" class="t-logoWrapper">
+              <div class="t-logo"></div></a>
+              <div class="t-pageNameHolder"><span class="t-pageHiddenName"></span></div>
+            </div>
+            <div class="t-modalButtonsHolder t-modalNewsBtnsHolder t-modalNewBtnHolderHidden">
+              <div class="t-modalBtnsCtrl">
+                <div class="t-modalShare">
+                  <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="t-hoverable">
+                    <use xlink:href="#path0_fill5" fill="#FFF" class="t-svgBg"></use>
+                    <use xlink:href="#path1_stroke5" transform="translate(8 8)" fill="#E0E0E0" class="t-svgFigure"></use>
+                    <defs>
+                      <path id="path0_fill5" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"></path>
+                      <path id="path1_stroke5" d="M4 0l.707-.707a1 1 0 0 0-1.414 0L4 0zM3 5a1 1 0 0 0 2 0H3zM1 5a1 1 0 0 0-2 0h2zM0 8h-1a1 1 0 0 0 1 1V8zm8 0v1a1 1 0 0 0 1-1H8zm1-3a1 1 0 1 0-2 0h2zM1.293 1.293a1 1 0 0 0 1.414 1.414L1.293 1.293zm4 1.414a1 1 0 0 0 1.414-1.414L5.293 2.707zM3 0v5h2V0H3zm-4 5v3h2V5h-2zm1 4h8V7H0v2zm9-1V5H7v3h2zM2.707 2.707l2-2L3.293-.707l-2 2 1.414 1.414zm4-1.414l-2-2L3.293.707l2 2 1.414-1.414z"></path>
+                    </defs>
+                  </svg>
+                </div>
+                <div class="t-modalFavorites">
+                  <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="t-hoverable">
+                    <use xlink:href="#path0_fillFav" fill="#FFF" class="t-svgBg"></use>
+                    <use xlink:href="#path1_strokeFav" transform="translate(9 8)" fill="#E0E0E0" class="t-svgFigure"></use>
+                    <defs>
+                      <path id="path0_fillFav" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"></path>
+                      <path id="path1_strokeFav" d="M7 0a1 1 0 0 0-2 0h2zM6 8l-.555.832A1 1 0 0 0 7 8H6zM0 8h-1a1 1 0 0 0 1.555.832L0 8zm1-8a1 1 0 1 0-2 0h2zm2 6l.555-.832a1 1 0 0 0-1.11 0L3 6zm2-6v8h2V0H5zM1 8V0h-2v8h2zm5.555-.832l-3-2-1.11 1.664 3 2 1.11-1.664zm-4.11-2l-3 2 1.11 1.664 3-2-1.11-1.664z"></path>
+                    </defs>
+                  </svg>
+                </div>
+              </div>
+              <div class="t-modalBack">
+                <svg class="t-hoverable" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                  <use xlink:href="#path0_fill6" fill="#FFF" class="t-svgBg"></use>
+                  <use xlink:href="#path1_stroke6" transform="translate(7 8)" fill="#E0E0E0" class="t-svgFigure"></use>
+                  <defs>
+                    <path id="path0_fill6" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"></path>
+                    <path id="path1_stroke6" d="M0 3l-.707-.707a1 1 0 0 0 0 1.414L0 3zM3.707.707A1 1 0 0 0 2.293-.707L3.707.707zm-1.414 6a1 1 0 0 0 1.414-1.414L2.293 6.707zM8 8a1 1 0 1 0 2 0H8zM0 4h6V2H0v2zm6-1v1h-.002-.001-.003-.002H6l.058.003c.068.005.138.012.246.03.242.04.474.092.749.236C7.513 4.5 8 4.931 8 6h2c0-1.931-1.014-3-2.053-3.52a5.194 5.194 0 0 0-1.314-.42A5.192 5.192 0 0 0 6.025 2H6.004h-.002-.001L6 3zm-5.293.707l3-3L2.293-.707l-3 3L.707 3.707zm-1.414 0l3 3 1.414-1.414-3-3-1.414 1.414zM8 6v2h2V6H8z"></path>
+                  </defs>
+                </svg>
+              </div>
+            </div>
+          </div>
           <div style="background-color:#57C9FA" class="t-newsColorBlock"></div>
           <div class="t-newsInsideHolder">
             <div class="t-modalButtonsHolder t-modalNewsBtnsHolder">
@@ -2414,7 +2456,7 @@
           </div>
           <input type="text" placeholder="Название статьи" class="t-addArticleName">
           <select name="" class="t-selectArticleCategory">
-            <option class="t-noneItem" value="1">Выберите рубрику</option>
+            <option class="t-noneItem dontUse" disabled="disabled" selected value="1">Выберите рубрику</option>
             <option value="2">Категория 1</option>
             <option value="3">Категория 2</option>
             <option value="4">Категория 3</option>
@@ -2450,7 +2492,6 @@
         </div>
       </section>
       <div class="cursor">
-        <div class="dot"></div>
         <div class="loader"></div>
       </div>
     </div>
