--- a/projects/MIR/aboutCompany.html
+++ b/projects/MIR/aboutCompany.html
@@ -49,12 +49,18 @@
                 <li><a href="/employees.html">Сотрудники</a></li>
                 <li><a href="/vacancy.html">Вакансии</a></li>
             </ul>
-            <div class="t-mainContentContainer">
+            <div class="t-mainContentContainer t-mainContentContainerAboutCompany">
                 <div class="t-aboutGeography t-mainContentSmallContainer">
                     <h1 class="t-middleTitle">О географии</h1>
                     <p>Мы уже работаем с большинством регионов и городов России. Логистика с зарубежным рынком представлена странами Прибалтики, СНГ и Китайской Народной Республикой.</p>
                     <br>
                     <p>Благодаря опытному штату и отлаженной логистике, доставка, даже в отдаленные уголки, занимает минимальный срок.</p>
+                </div>
+                <div class="t-aboutCarPark t-mainContentSmallContainer">
+                    <h1 class="t-middleTitle">Автопарк</h1>
+                    <p>Автопарк ЛЦ МИР представлен тягачами SCANIA и полуприцепами европейского качества. Каждая машина оборудована GPS-трекером, который позволяет отслеживать точное местоположение груза. Подобная система обеспечивает безопасность вашему грузу.</p>
+                    <br>
+                    <p>Наши водители — эксперты в области грузоперевозок, именно поэтому ЛЦ МИР не опаздывает на погрузку, разгрузку и с доставкой.</p>
                 </div>
                 <div class="t-aboutUsInValues">
                     <h1 class="t-middleTitle t-t">О нас в цифрах</h1>
@@ -160,6 +166,46 @@
                         <div class="t-gridItem">
                             <div class="t-gridItemImg">
                                 <img src="/images/aboutIcons/partners/lenta.png" alt="Lenta">
+                            </div>
+                        </div>
+                        <div class="t-gridItem">
+                            <div class="t-gridItemImg">
+                                <img src="/images/aboutIcons/partners/sibur.png" alt="Sibur">
+                            </div>
+                        </div>
+                        <div class="t-gridItem">
+                            <div class="t-gridItemImg">
+                                <img src="/images/aboutIcons/partners/baltika.png" alt="Baltika">
+                            </div>
+                        </div>
+                        <div class="t-gridItem">
+                            <div class="t-gridItemImg">
+                                <img src="/images/aboutIcons/partners/pepsi.png" alt="Pepsi">
+                            </div>
+                        </div>
+                        <div class="t-gridItem">
+                            <div class="t-gridItemImg">
+                                <img src="/images/aboutIcons/partners/furnitureFactory.png" alt="Furniture Factory">
+                            </div>
+                        </div>
+                        <div class="t-gridItem">
+                            <div class="t-gridItemImg">
+                                <img src="/images/aboutIcons/partners/danone.png" alt="Danone">
+                            </div>
+                        </div>
+                        <div class="t-gridItem">
+                            <div class="t-gridItemImg">
+                                <img src="/images/aboutIcons/partners/tomskBeer.png" alt="Tomsk Beer">
+                            </div>
+                        </div>
+                        <div class="t-gridItem">
+                            <div class="t-gridItemImg">
+                                <img src="/images/aboutIcons/partners/sibGroup.png" alt="Sib Group">
+                            </div>
+                        </div>
+                        <div class="t-gridItem">
+                            <div class="t-gridItemImg">
+                                <img src="/images/aboutIcons/partners/nefteGaz.png" alt="Nefte Gaz">
                             </div>
                         </div>
                     </div>
