--- a/projects/MIR/contacts.html
+++ b/projects/MIR/contacts.html
@@ -59,7 +59,7 @@
                             </div>
                             <div class="t-formEmailOrPhone t-formItem">
                                 <label for="emailOrPhone" class="t-standardTitle t-blackPrimaryColor">Телефон или электронная почта</label>
-                                <input type="text" id="emailOrPhone" class="t-input">
+                                <input type="text" id="emailOrPhone" class="t-input" required>
                             </div>
                             <div class="t-formEmailOrPhone t-formItem">
                                 <label for="commentOrQuestion" class="t-standardTitle t-blackPrimaryColor">Комментарий или вопрос</label>
